--- a/Ogu-gif.html
+++ b/Ogu-gif.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="Ogu-info.html"><header>
+    <a href="Ogu-gif.html"><header>
         <h1>오구 움짤 모음</h1>
          <img src="콕콕오구.gif" alt="">
      </header></a>
@@ -16,7 +16,7 @@
 
         <nav>
             <ul>
-                <li> <a href="ogu-info.html">오구는요</a> </li>
+                <li> <a href="index.html">오구는요</a> </li>
                 <li> <a href="ogu-emo.html">오구 이모티콘 모음</a> </li>
                 <li> <a href="ogu-gif.html">오구 움짤 모음</a> </li>
             </ul>
