--- a/Ogu-info.html
+++ b/Ogu-info.html
@@ -18,7 +18,7 @@
             <ul>
                 <li> <a href="ogu-info.html">오구는요</a> </li>
                 <li> <a href="ogu-emo.html">오구 이모티콘 모음</a> </li>
-                <li> <a href="Ogu-gif.html">오구 움짤 모음</a> </li>
+                <li> <a href="Ogu-gifs.html">오구 움짤 모음</a> </li>
             </ul>
         </nav>
         
