--- a/Ogu-um.html
+++ b/Ogu-um.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="Ogu-gifs.html"><header>
+    <a href="Ogu-um.html"><header>
         <h1>오구 움짤 모음</h1>
          <img src="콕콕오구.gif" alt="">
      </header></a>
@@ -18,7 +18,7 @@
             <ul>
                 <li> <a href="index.html">오구는요</a> </li>
                 <li> <a href="ogu-emo.html">오구 이모티콘 모음</a> </li>
-                <li> <a href="ogu-gifs.html">오구 움짤 모음</a> </li>
+                <li> <a href="Ogu-um.html">오구 움짤 모음</a> </li>
             </ul>
         </nav>
         
