--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li> <a href="index.html">오구는요</a> </li>
                 <li> <a href="ogu-emo.html">오구 이모티콘 모음</a> </li>
-                <li> <a href="ogu-gifs.html">오구 움짤 모음</a> </li>
+                <li> <a href="Ogu-um.html">오구 움짤 모음</a> </li>
             </ul>
         </nav>
         
